--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ sqlmodel
 jinja2
 psycopg[binary]      # pour Postgres moderne
 python-multipart     # si tu ajoutes des formulaires upload plus tard
+httpx>=0.27.0
