--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ fastapi
 uvicorn[standard]
 sqlmodel
 jinja2
-psycopg[binary]      # pour Postgres moderne
 python-multipart     # si tu ajoutes des formulaires upload plus tard
+psycopg[binary]>=3.1
 httpx>=0.27.0
