--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ jinja2
 python-multipart     # si tu ajoutes des formulaires upload plus tard
 psycopg[binary]>=3.1
 httpx>=0.27.0
+python-dateutil>=2.9.0.post0
