--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ python-multipart     # si tu ajoutes des formulaires upload plus tard
 psycopg[binary]>=3.2
 httpx>=0.27.0
 python-dateutil>=2.9.0.post0
+supabase
